alignment issues re: transposeGroup

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ textarea{ font-family: monospace;}
  * SETTINGS
  */
 #transpose{width:75px;}
+#transposeGroup{margin-top:-4px;}
 button{ margin-bottom:4px; margin-top:4px;}
 #switches .bootstrap-switch{ text-align: center; }
 #switches .bootstrap-switch-label{ width:100px; }
